--- a/css/main.css
+++ b/css/main.css
@@ -223,7 +223,7 @@ p img {
 }
 
 p.lead {
-  font-family: "Lora", serif;
+  font-family: "Times New Roman", serif;
   font-weight: 500;
   font-size: 2.8rem;
   line-height: 1.857;
