--- a/css/main.css
+++ b/css/main.css
@@ -2648,7 +2648,9 @@ html.no-csstransitions . {
 
 }
 
-
+p > a:hover {
+  color: red !important; 
+}
 /* ===================================================================
  * # connect
  *
